--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "heroku-postbuld": "npm run production"
+
     },
-    "devDependencies": {
+    "dependencies": {
         "axios": "^0.18",
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
-        "lodash": "^4.17.4"
-    },
-    "dependencies": {
+        "lodash": "^4.17.4",
         "ajv-keywords": "^3.2.0",
         "babel-preset-react": "^6.24.1",
         "bootstrap": "^4.1.1",
